beryllium (1.1.3) debian;

  * Fix for Http push.

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 4 Jun 2014 19:35:00 +0900

beryllium (1.1.2) debian;

  * Http push video stream to a streaming server.
  * Option to not turn off streaming on idle.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 28 May 2014 14:39:00 +0900

beryllium (1.1.1) debian;

  * Config values from files specified with -c option now are read only

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 15 May 2014 11:39:00 +0900

beryllium (1.1.0) debian;

  * Global mouse shortcuts, long press shortcuts

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 14 May 2014 12:19:00 +0900

beryllium (1.0.1) debian;

  * Drag'n'drop for deleting files

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 5 May 2014 13:23:00 +0900

beryllium (0.9.5) debian;

  * Load/save/edit/reset settings

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 21 Apr 2014 12:40:00 +0900

beryllium (0.9.4) debian;

  * Rearrange all settings into groups

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 3 Apr 2014 17:20:00 +0900

beryllium (0.9.3) debian;

  * Multiple -c configs

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 3 Apr 2014 12:32:00 +0900

beryllium (0.9.2) debian;

  * Activate external d-bus service if not started

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 1 Apr 2014 10:06:00 +0900

beryllium (0.9.1) debian;

  * Connect to external d-bus service

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 31 Mar 2014 14:00:00 +0900

beryllium (0.9.0) debian;

  * New d-bus methods

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 28 Mar 2014 15:26:00 +0900

beryllium (0.8.6) debian;

  * Fix for dicom raw data storage
  * Force raw data storage for Ultrasonic videos

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 20 Mar 2014 16:13:00 +0900

beryllium (0.8.5) debian;

  * Global hotkeys

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 19 Mar 2014 16:25:00 +0900

beryllium (0.8.4) debian;

  * Ignore duplicate studies via d-bus
