@@ -23,8 +23,8 @@
 #define PRODUCT_FULL_NAME       "Beryllium"
 #define PRODUCT_SHORT_NAME      "beryllium" // lowercase, no spaces
 
-#define PRODUCT_VERSION         0x010102
-#define PRODUCT_VERSION_STR     "1.1.2"
+#define PRODUCT_VERSION         0x010104
+#define PRODUCT_VERSION_STR     "1.1.4"
 
 #define PRODUCT_SITE_URL        "http://" ORGANIZATION_DOMAIN "/projects/" PRODUCT_SHORT_NAME "/"
 #define PRODUCT_NAMESPACE       "ru.baikal.dc." PRODUCT_SHORT_NAME
